# nvim-singleton

./: .project.vim  CMakeLists.txt  _edit.cmd
src/: main.cpp
